:zap: Specify the id of the user default group in the configuration file.

--- a/config.yml.example
+++ b/config.yml.example
@@ -55,6 +55,10 @@ database:
     pool-size: 100
     # Timeout(second)
     timeout: 5
+data:
+  # Default group id, must be UUID format
+  # Note: After setting, it is not necessary to change.
+  group-id: '696a6d8a-f788-2c6a-ba33-128eff97fb64'
 # Security config
 security:
   # Password config
